# BW-Data-Compression

./: .gitignore  BWTransform.cpp  BWTransform.h  BurrowsWheelerCompression.cpp  BurrowsWheelerCompression.h  CMakeLists.txt  CompressionClient.cpp  CompressionClient.h  GTest.CMakeLists.txt.in  HuffmanCompression.cpp  HuffmanCompression.h  MoveToFrontEncoding.cpp  MoveToFrontEncoding.h  README.md  SuffixArray.cpp  SuffixArray.h
demo/: main.cpp
main/: main.cpp
test/: EndToEndTests.cpp
utils/: Binary.h  Sorting.h
